--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
 
     .sidebar {
       position: fixed; left: -100%; top: 0; width: 250px; height: 100%;
-      background: #111; padding-top: 4rem; transition: left 0.3s ease; z-index: 999;
+      background: #111; padding-top: 4rem;
+      transition: left 0.3s ease, opacity 0.3s ease;
+      opacity: 0;
+      z-index: 999;
+      overflow-y: auto;
     }
-    .sidebar.active { left: 0; }
+    .sidebar.active {
+      left: 0; opacity: 1;
+    }
     .sidebar ul { list-style: none; }
     .sidebar li { padding: 1rem 2rem; border-bottom: 1px solid #222; }
     .sidebar a:hover { color: gold; }
@@ -59,6 +65,24 @@
     .card.active {
       display: block; opacity: 1; animation: fadeIn 0.4s ease-in-out;
     }
+    .card h2 { font-size: 1.2rem; color: gold; margin-bottom: 0.5rem; }
+    .card p { font-size: 0.95rem; line-height: 1.5; }
+    .card .role { font-style: italic; color: #ccc; font-size: 0.9rem; }
+
+    .icon {
+      display: inline-block;
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      margin-right: 8px;
+      vertical-align: middle;
+    }
+    .icon.euria { background: linear-gradient(45deg, #ffd700, #ffffff); }
+    .icon.graveth { background: linear-gradient(45deg, #00bfff, #1e90ff); }
+    .icon.maredien { background: linear-gradient(45deg, #228b22, #32cd32); }
+    .icon.heretic { background: linear-gradient(45deg, #4b0082, #8a2be2); }
+    .icon.diablonic { background: linear-gradient(45deg, #8b0000, #ff4500); }
+    .icon.laurian { background: linear-gradient(45deg, #aaa, #eee); }
 
     .info-box {
       max-width: 700px; margin: 2rem auto; padding: 1rem;
@@ -103,32 +127,65 @@
 
 <main class="hero">
   <h1>🌍 Eternal SMP Season 14</h1>
-  <p>Petualangan baru telah dimulai... Pilih ras karaktermu dan bentuk kisahmu sendiri!</p>
+  <p>Petualangan baru telah dimulai. Pilih ras karaktermu dan bentuk kisahmu sendiri!</p>
 
   <div class="slider-container">
     <button class="prev" onclick="prevSlide()">❮</button>
     <div class="slides">
-      <img class="slide active" src="https://github.com/marcellnw/eternalsmpoc/blob/main/euria.png?raw=true" alt="Euria" />
+      <img class="slide active" src="https://github.com/marcellnw/eternalsmpoc/blob/main/laurian.png?raw=true" alt="Laurian" /> 
       <img class="slide" src="https://github.com/marcellnw/eternalsmpoc/blob/main/graveth.png?raw=true" alt="Graveth" />
       <img class="slide" src="https://github.com/marcellnw/eternalsmpoc/blob/main/maredien.png?raw=true" alt="Maredien" />
       <img class="slide" src="https://github.com/marcellnw/eternalsmpoc/blob/main/heretic.png?raw=true" alt="Heretic" />
       <img class="slide" src="https://github.com/marcellnw/eternalsmpoc/blob/main/diablonic.png?raw=true" alt="Diablonic" />
-      <img class="slide" src="https://github.com/marcellnw/eternalsmpoc/blob/main/laurian.png?raw=true" alt="Laurian" />
+      <img class="slide" src="https://github.com/marcellnw/eternalsmpoc/blob/main/euria.png?raw=true" alt="Euria" />
     </div>
     <button class="next" onclick="nextSlide()">❯</button>
   </div>
 
   <div class="character-info">
-    <div class="card active"><b>Euria 🧍‍♂️</b><br>Ras manusia murni. Seimbang & fleksibel.<br><i>Cocok: Semua class</i></div>
-    <div class="card"><b>Graveth 🦅</b><br>Makhluk Avian. Lompat & melayang.<br><i>Cocok: Scout, Assassin</i></div>
-    <div class="card"><b>Maredien 🌿</b><br>Elf/Dryad. Kuat dalam sihir alam.<br><i>Cocok: Druid, Mage</i></div>
-    <div class="card"><b>Heretic 🌓</b><br>Campuran manusia & diablonic. Magis & misterius.<br><i>Cocok: Warlock, Illusionist</i></div>
-    <div class="card"><b>Diablonic 🔥</b><br>Iblis murni. Kuat & brutal.<br><i>Cocok: Tank, Berserker</i></div>
-    <div class="card"><b>Laurian ⚪</b><br>Manusia umum. Default atau hukuman.<br><i>Cocok: Pemula</i></div>
+    <div class="card active">
+      <h2><span class="icon euria"></span> Euria – Manusia Murni</h2>
+      <p>Ras yang memiliki keseimbangan alami dalam kekuatan, kecerdasan, dan kelincahan. Cocok untuk pemain yang menginginkan fleksibilitas tinggi dan bisa beradaptasi dengan berbagai peran.</p>
+      <p class="role">Cocok untuk: Semua class – Petarung, Penyihir, Pemburu</p>
+    </div>
+
+    <div class="card">
+      <h2><span class="icon graveth"></span> Graveth – Makhluk Avian</h2>
+      <p>Ras dengan tubuh ringan dan gesit, memiliki kemampuan lompat tinggi dan bisa melayang. Sangat lincah dan efektif dalam mobilitas tinggi di medan tempur.</p>
+      <p class="role">Cocok untuk: Assassin, Scout, Archer</p>
+    </div>
+
+    <div class="card">
+      <h2><span class="icon maredien"></span> Maredien – Elf / Dryad</h2>
+      <p>Bangsawan yang terikat dengan kekuatan alam. Mereka punya afinitas tinggi terhadap sihir penyembuhan dan elemen alami.</p>
+      <p class="role">Cocok untuk: Support, Healer, Mage, Druid</p>
+    </div>
+
+    <div class="card">
+      <h2><span class="icon heretic"></span> Heretic – Manusia & Diablonic</h2>
+      <p>Pewaris kekuatan terlarang yang gelap, namun tidak sepenuhnya jahat. Memiliki kemampuan sihir unik dan tidak terduga.</p>
+      <p class="role">Cocok untuk: Warlock, Dark Mage, Illusionist</p>
+    </div>
+
+    <div class="card">
+      <h2><span class="icon diablonic"></span> Diablonic – Iblis Murni</h2>
+      <p>Makhluk kuat dengan tubuh tahan banting, kekuatan besar, dan energi neraka. Namun mereka sering mendapat stigma buruk dari ras lain.</p>
+      <p class="role">Cocok untuk: Berserker, Tank, Brute</p>
+    </div>
+
+    <div class="card">
+      <h2><span class="icon laurian"></span> Laurian – Manusia Umum</h2>
+      <p>Ras paling sederhana, hampir mirip dengan Euria tapi lebih lemah. Ras ini diberikan kepada pemain yang mengisi formulir asal-asalan.</p>
+      <p class="role">Cocok untuk: Pemula, karakter latar belakang biasa</p>
+    </div>
   </div>
 
   <div class="info-box">
-    <h3>Cara agar diterima ke Eternal SMP:</h3>
+    <h3>📖 Sinopsis Season 14: Kelahiran Dunia Baru</h3>
+    <p>Setelah perang besar antar dimensi di Season 13, dunia EternalSMP mengalami kehancuran struktural. Dari reruntuhan itu, lahirlah sebuah realitas baru — dengan sihir yang belum stabil, kekuatan kuno yang bangkit, dan ras-ras lama yang berevolusi kembali.</p>
+    <p>Pemain akan memasuki Era Reformation, di mana pilihan ras dan jalan cerita mereka akan mempengaruhi keseimbangan dunia. Akankah perdamaian bisa dicapai, atau justru kekuatan jahat akan merebut segalanya?</p>
+
+    <h4>Cara agar diterima ke Eternal SMP:</h4>
     <ul>
       <li>✅ Lore original buatan sendiri</li>
       <li>🚫 Tidak menggunakan AI</li>
@@ -138,67 +195,62 @@
   </div>
 </main>
 
-  <script>
-  // Toggle Sidebar
-  function toggleMenu() {
-    const sidebar = document.getElementById("sidebar");
-    sidebar.classList.toggle("active");
-    playClick();
-  }
-
-  // Sound Click
-  const clickSound1 = new Audio("https://github.com/marcellnw/eternalsmpoc/raw/main/click.m4a");
-  const clickSound2 = new Audio("https://github.com/marcellnw/eternalsmpoc/raw/main/Click2.m4a");
-
-  function playClick() {
-    clickSound1.currentTime = 0;
-    clickSound1.play();
-  }
-
-  // Slider Logic
-  let currentSlide = 0;
-  const slides = document.querySelectorAll(".slide");
-  const cards = document.querySelectorAll(".card");
-
-  function showSlide(index) {
-    slides.forEach((slide, i) => {
-      slide.classList.remove("active");
-      cards[i].classList.remove("active");
-      if (i === index) {
-        slide.classList.add("active");
-        cards[i].classList.add("active");
-      }
-    });
-  }
-
-  function nextSlide() {
-    currentSlide = (currentSlide + 1) % slides.length;
-    showSlide(currentSlide);
-    clickSound2.currentTime = 0;
-    clickSound2.play();
-  }
-
-  function prevSlide() {
-    currentSlide = (currentSlide - 1 + slides.length) % slides.length;
-    showSlide(currentSlide);
-    clickSound2.currentTime = 0;
-    clickSound2.play();
-  }
-
-  // Init
-  window.addEventListener("DOMContentLoaded", () => {
-    showSlide(currentSlide);
-  });
-</script>
-
 <footer class="footer">
-  <p>© EternalSMP - Server Roleplay Minecraft Indonesia</p>
+  <p>© 2025 EternalSMP Server. All rights reserved.</p>
   <div class="socials">
     <a href="https://discord.gg/YCGvq8W3Bp" target="_blank">Discord</a>
     <a href="https://www.instagram.com/eternalsmp/profilecard/?igsh=MWw4aDhleDFzOGticA==" target="_blank">Instagram</a>
     <a href="https://www.tiktok.com/@eternalsmpserver?_t=ZS-8xzzVAcllcv&_r=1" target="_blank">TikTok</a>
   </div>
 </footer>
+
+<script>
+let currentSlide = 0;
+const slides = document.querySelectorAll(".slide");
+const cards = document.querySelectorAll(".card");
+
+function showSlide(index) {
+  slides.forEach((slide, i) => {
+    slide.classList.toggle("active", i === index);
+    cards[i].classList.toggle("active", i === index);
+  });
+  currentSlide = index;
+}
+
+function nextSlide() {
+  let next = (currentSlide + 1) % slides.length;
+  showSlide(next);
+  playClick2();
+}
+
+function prevSlide() {
+  let prev = (currentSlide - 1 + slides.length) % slides.length;
+  showSlide(prev);
+  playClick2();
+}
+
+function toggleMenu() {
+  const sidebar = document.getElementById("sidebar");
+  sidebar.classList.toggle("active");
+
+  // Lock/unlock body scroll
+  document.body.style.overflow = sidebar.classList.contains("active") ? "hidden" : "auto";
+
+  playClick();
+}
+
+const clickSound = new Audio("https://github.com/marcellnw/eternalsmpoc/blob/main/click.m4a?raw=true");
+const clickSound2 = new Audio("https://github.com/marcellnw/eternalsmpoc/blob/main/Click2.m4a?raw=true");
+
+function playClick() {
+  clickSound.currentTime = 0;
+  clickSound.play();
+}
+function playClick2() {
+  clickSound2.currentTime = 0;
+  clickSound2.play();
+}
+</script>
 
 </body>
 </html>
