--- a/page2.html
+++ b/page2.html
@@ -110,7 +110,7 @@
 
 <header>
   <div class="logo">EternalSMP</div>
-  <button class="btn-back" onclick="window.location.href='index.html'">🏠 Kembali ke Halaman Utama</button>
+  <button class="btn-back" onclick="window.location.href='index.html'">🏠 Kembali</button>
 </header>
 
 <div class="container">
