--- a/page2.html
+++ b/page2.html
@@ -141,6 +141,33 @@
         max-width: 280px;
       }
     }
+    .fade-in-up {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeInUp 0.6s ease-out forwards;
+}
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.glow-btn {
+  background-color: gold;
+  color: black;
+  border: none;
+  padding: 10px 16px;
+  font-weight: bold;
+  border-radius: 8px;
+  transition: all 0.3s ease;
+  box-shadow: 0 0 0px rgba(255, 215, 0, 0.6);
+}
+.glow-btn:hover {
+  box-shadow: 0 0 12px rgba(255, 215, 0, 0.8), 0 0 24px rgba(255, 215, 0, 0.4);
+  transform: scale(1.05);
+  cursor: pointer;
+      }
   </style>
 </head>
 <body>
@@ -283,8 +310,60 @@
   </ul>
 </footer>
 
-<!-- Script -->
-<script>
+<body>
+  <!-- 🔈 Suara Klik -->
+  <audio id="clickSound" src="click.mp3" preload="auto"></audio>
+  <audio id="Click2Sound" src="click2.mp3" preload="auto"></audio>
+
+  <!-- 🧾 Form Karakter OC -->
+  <div id="formPage" class="container fade-in-up">
+    <h1>Pendaftaran Karakter EternalSMP</h1>
+    <form id="ocForm">
+      <label>Gamertag</label>
+      <input id="gamertag" name="gamertag" required pattern="\w{3,16}" />
+
+      <label>Nama Karakter OC</label>
+      <input id="ocname" name="ocname" required pattern="[A-Za-z\s]{3,}" />
+
+      <label>Ras</label>
+      <input id="race" name="race" required />
+
+      <label>Class</label>
+      <input id="class" name="class" required />
+
+      <label>Job</label>
+      <input id="job" name="job" required />
+
+      <label>Role</label>
+      <input id="role" name="role" required />
+
+      <label>Sifat & Kepribadian</label>
+      <textarea id="sifat" name="sifat" required></textarea>
+
+      <label>Lore & Background</label>
+      <textarea id="lore" name="lore" required></textarea>
+
+      <label>Tujuan & Motivasi</label>
+      <textarea id="tujuan" name="tujuan" required></textarea>
+
+      <label>Gambar (opsional)</label>
+      <input type="file" id="image" name="image" accept="image/*" />
+
+      <div style="margin-top: 16px;">
+        <button type="button" onclick="playClick(); showPreview();" class="glow-btn">👁️ Preview</button>
+        <button type="button" onclick="playClick2(); submitToDiscord();" class="glow-btn">🚀 Kirim ke Discord</button>
+      </div>
+    </form>
+  </div>
+
+  <!-- 🔍 Preview Halaman -->
+  <div id="previewPage" class="container hidden fade-in-up">
+    <h2>📜 Preview Karakter</h2>
+    <pre id="previewContent"></pre>
+    <!-- Tombol kembali dihapus sesuai permintaan -->
+  </div>
+  
+    <script>
   // 🔊 Suara klik
   function playClick() {
     document.getElementById("clickSound")?.play();
@@ -293,17 +372,17 @@
     document.getElementById("Click2Sound")?.play();
   }
 
-  // 🔁 Navigasi halaman
+  // 🔁 Navigasi antar halaman
   function showPage(id) {
     document.querySelectorAll(".container").forEach(div => div.classList.add("hidden"));
-    document.getElementById(id).classList.remove("hidden");
+    const target = document.getElementById(id);
+    target.classList.remove("hidden");
+    target.classList.remove("fade-in-up");
+    void target.offsetWidth;
+    target.classList.add("fade-in-up");
   }
 
-  function backToForm() {
-    showPage("formPage");
-  }
-
-  // 🔐 Validasi manual tambahan
+  // 🔐 Validasi input manual
   function validateFormInputs() {
     const gamertag = document.querySelector("#gamertag").value.trim();
     const ocname = document.querySelector("#ocname").value.trim();
@@ -319,15 +398,15 @@
       alert("Nama karakter OC minimal 3 huruf dan hanya huruf/spasi.");
       return false;
     }
-    if (sifat.length < 50) {
+    if (sifat.split(/\s+/).length < 50) {
       alert("Sifat & Kepribadian minimal 50 kata.");
       return false;
     }
-    if (lore.length < 300) {
+    if (lore.split(/\s+/).length < 300) {
       alert("Lore minimal 300 kata.");
       return false;
     }
-    if (tujuan.length < 100) {
+    if (tujuan.split(/\s+/).length < 100) {
       alert("Tujuan minimal 100 kata.");
       return false;
     }
@@ -335,7 +414,7 @@
     return true;
   }
 
-  // 👁️ Preview karakter
+  // 👁️ Tampilkan Preview
   function showPreview() {
     const form = document.getElementById("ocForm");
     if (!form.checkValidity()) {
@@ -361,50 +440,120 @@
       return `${label}:\n${value.trim()}\n`;
     }).join("\n");
 
-    document.getElementById("previewContent").innerText = previewText;
+    const previewContainer = document.getElementById("previewContent");
+    previewContainer.innerText = previewText;
+
     showPage("previewPage");
   }
 </script>
-    <script>
-      
+  <script>
+  function submitToDiscord() {
+    const form = document.getElementById("ocForm");
+    const data = new FormData(form);
+
+    if (!form.checkValidity()) {
+      form.reportValidity();
+      return;
+    }
+    if (!validateFormInputs()) return;
+    if (!confirm("Apakah kamu yakin ingin mengirim pendaftaran ini?")) return;
+
     const imageFile = data.get("image");
     if (imageFile && imageFile.name && !imageFile.type.startsWith("image/")) {
       alert("File yang diunggah harus berupa gambar.");
       return;
     }
 
-    const fields = [];
+    const webhook = "https://discord.com/api/webhooks/1389899055672594494/ap4v8BlHwvs8JL8RXmisbPcZDsBZBCImJfkQdawlXPKAN8Uw8rWKPLSnL7P5WOf5vDm5";
+
+    // 🎯 Pisahkan menjadi embed-info, embed-lore, embed-tujuan
+    const infoFields = [];
+    let loreChunks = [], tujuanChunks = [];
+
     for (let [key, value] of data.entries()) {
-      if (key !== "image" && value.trim()) {
-        const emoji = {
-          gamertag: "🎮", ocname: "👤", race: "🧬", class: "⚔️",
-          job: "🔨", role: "👑", sifat: "🎭", lore: "📖", tujuan: "🎯"
-        }[key] || "";
+      if (key === "image") continue;
+      const text = value.trim();
+      const chunks = text.match(/.{1,1024}/gs) || [];
+      const emoji = {
+        gamertag: "🎮", ocname: "👤", race: "🧬", class: "⚔️",
+        job: "🔨", role: "👑", sifat: "🎭", lore: "📖", tujuan: "🎯"
+      }[key] || "";
 
-        const label = {
-          gamertag: "Nama Gamertag", ocname: "Nama Karakter",
-          race: "Ras", class: "Class", job: "Job", role: "Role Sosial",
-          sifat: "Sifat & Kepribadian", lore: "Lore & Background", tujuan: "Tujuan & Motivasi"
-        }[key] || key;
+      const label = {
+        gamertag: "Nama Gamertag", ocname: "Nama Karakter",
+        race: "Ras", class: "Class", job: "Job", role: "Role Sosial",
+        sifat: "Sifat & Kepribadian", lore: "Lore & Background", tujuan: "Tujuan & Motivasi"
+      }[key] || key;
 
-        // Split jika terlalu panjang (>1024 karakter)
-        const chunks = value.trim().match(/.{1,1024}/gs);
-        chunks.forEach((chunk, i) => {
-          fields.push({
-            name: `${emoji} ${label}${chunks.length > 1 ? ` (${i + 1})` : ""}`,
-            value: chunk,
-            inline: false
-          });
-        });
-      }
+      const mappedChunks = chunks.map((chunk, i) => ({
+        name: `${emoji} ${label}${chunks.length > 1 ? ` (${i + 1})` : ""}`,
+        value: chunk,
+        inline: false
+      }));
+
+      if (key === "lore") loreChunks = mappedChunks;
+      else if (key === "tujuan") tujuanChunks = mappedChunks;
+      else infoFields.push(mappedChunks[0]); // pakai hanya 1 field (karena pendek)
     }
 
-    
+    // 📦 Buat 3 embed terpisah
+    const embeds = [
+      {
+        title: "🗡️ Pendaftaran Karakter Baru",
+        description: "Berikut adalah karakter OC yang baru terdaftar:",
+        color: 0xFFD700,
+        fields: infoFields
+      },
+      {
+        title: "📖 Lore & Background",
+        color: 0x5865F2,
+        fields: loreChunks
+      },
+      {
+        title: "🎯 Tujuan & Motivasi",
+        color: 0x57F287,
+        fields: tujuanChunks
+      }
+    ];
+
+    try {
+      let response;
+
+      if (imageFile && imageFile.name) {
+        const buffer = await imageFile.arrayBuffer();
+        const blob = new Blob([buffer], { type: imageFile.type });
+
+        const formData = new FormData();
+        formData.append("file", blob, imageFile.name);
+        formData.append("payload_json", JSON.stringify({
+          username: "EternalSMP OC Register",
+          embeds: [
+            { ...embeds[0], image: { url: "attachment://" + imageFile.name } },
+            embeds[1],
+            embeds[2]
+          ]
+        }));
+
+        response = await fetch(webhook, {
+          method: "POST",
+          body: formData
+        });
+      } else {
+        response = await fetch(webhook, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            username: "EternalSMP OC Register",
+            embeds: embeds
+          })
+        });
+      }
+
       if (!response.ok) {
         throw new Error("Gagal mengirim ke Discord: " + (await response.text()));
       }
 
-      // Simpan ke localStorage
+      // 💾 Simpan lokal
       const ocEntry = {
         gamertag: data.get("gamertag"),
         ocname: data.get("ocname"),
@@ -425,10 +574,10 @@
       showPage("formPage");
 
     } catch (err) {
-      alert("❌ Gagal mengirim ke Discord. Silakan cek koneksi atau webhook.");
+      alert("❌ Gagal mengirim ke Discord. Cek koneksi atau webhook.");
       console.error(err);
     }
   }
 </script>
-  <body>
-    </script>
+</body>
+</html>
