--- a/page2.html
+++ b/page2.html
@@ -211,10 +211,9 @@
       <textarea id="tujuan" name="tujuan" minlength="100" maxlength="500" required></textarea>
 
       <!-- Tombol Aksi -->
-      <button class="btn" onclick="window.open('preview-oc.html', '_blank');" style="max-width: 280px;">👁️ Lihat Preview</button>
-      <div class="btn-group">
-        <button type="button" class="btn glow-btn" onclick="playClick(); submitToDiscord()">📨 Kirim Pendaftaran</button>
-      </div>
+<button type="button" class="btn glow-btn" onclick="playClick(); window.open('preview-oc.html', '_blank')">
+  👁️ Lihat Preview
+</button>
     </form>
   </div>
 
