--- a/page2.html
+++ b/page2.html
@@ -211,7 +211,7 @@
       <textarea id="tujuan" name="tujuan" minlength="100" maxlength="500" required></textarea>
 
       <!-- Tombol Aksi -->
-<button type="button" class="btn glow-btn" onclick="playClick(); window.open('preview-oc.html', '_blank')">
+<button type="button" class="btn glow-btn" onclick="playClick(); window.open('eternalsml-oc-form.html', '_blank')">
   👁️ Lihat Preview
 </button>
     </form>
