--- a/page2.html
+++ b/page2.html
@@ -205,13 +205,13 @@
       </div>
       <!-- Lore & Tujuan -->
       <label for="lore">📖 Lore & Background Karakter</label>
-      <textarea id="lore" name="lore" minlength="500" maxlength="3000" required></textarea>
+      <textarea id="lore" name="lore" minlength="300" maxlength="3000" required></textarea>
 
       <label for="tujuan">🎯 Tujuan & Motivasi Karakter</label>
       <textarea id="tujuan" name="tujuan" minlength="100" maxlength="500" required></textarea>
 
       <!-- Tombol Aksi -->
-<button type="button" class="btn glow-btn" onclick="playClick(); window.open('eternalsml-oc-form.html', '_blank')">
+<button type="button" class="btn glow-btn" onclick="playClick(); window.open('eternalsmp-oc-form.html', '_blank')">
   👁️ Lihat Preview
 </button>
     </form>
