--- a/eternalsmp-oc-form.html
+++ b/eternalsmp-oc-form.html
@@ -3,13 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <title>Preview Karakter OC – EternalSMP</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css">
   <style>
-    body {
+    :root {
+      --gold: #ffd700;
+      --dark: #000;
+      --text: #f0f0f0;
+    }
+
+    * {
+      box-sizing: border-box;
       margin: 0;
+      padding: 0;
+    }
+
+    body {
       font-family: 'Segoe UI', sans-serif;
-      background: #111;
-      color: #f0f0f0;
+      background: var(--dark);
+      color: var(--text);
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
 
     header {
@@ -18,16 +33,19 @@
       align-items: center;
       padding: 1rem 2rem;
       background-color: #000;
-      border-bottom: 1px solid gold;
-      color: gold;
+      border-bottom: 1px solid var(--gold);
+      color: var(--gold);
       font-size: 1.2rem;
     }
 
     .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 2rem;
-      animation: fadeInUp 0.6s ease-out;
+      max-width: 960px;
+      margin: 2rem auto;
+      padding: 1.5rem;
+      border: 1px solid var(--gold);
+      border-radius: 12px;
+      background-color: #111;
+      animation: fadeInUp 0.6s ease-out forwards;
     }
 
     .fade-in-up {
@@ -43,46 +61,84 @@
       }
     }
 
+    h1 {
+      color: var(--gold);
+      text-align: center;
+      margin-bottom: 1.2rem;
+      font-size: 1.8rem;
+    }
+
     pre {
       background: #1a1a1a;
       padding: 1rem;
       border-radius: 12px;
-      box-shadow: 0 0 12px rgba(255,215,0,0.1);
+      box-shadow: 0 0 12px rgba(255,215,0,0.15);
       white-space: pre-wrap;
+      overflow-x: auto;
+      font-size: 1rem;
+    }
+
+    .button-group {
+      text-align: center;
+      margin-top: 1.5rem;
+    }
+
+    .btn {
+      background: var(--gold);
+      color: #000;
+      font-weight: bold;
+      padding: 10px 18px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 1rem;
+      margin: 0.5rem;
+      transition: all 0.3s ease;
+      box-shadow: 0 0 10px rgba(255,215,0,0.3);
+    }
+
+    .btn:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 16px rgba(255,215,0,0.6);
     }
 
     footer {
+      margin-top: auto;
       background-color: #000;
-      border-top: 1px solid gold;
+      border-top: 1px solid var(--gold);
       color: #ccc;
       text-align: center;
       padding: 1rem 2rem;
       font-size: 0.9rem;
-      margin-top: 2rem;
     }
 
-    .back-button {
-      background: gold;
-      color: #000;
-      border: none;
-      padding: 10px 18px;
-      border-radius: 8px;
-      font-weight: bold;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      box-shadow: 0 0 10px rgba(255,215,0,0.3);
-      margin-bottom: 1rem;
+    img.banner {
+      max-width: 95%;
+      border-radius: 12px;
+      margin: 2rem auto 1rem;
+      box-shadow: 0 0 24px rgba(255,215,0,0.25);
+      display: block;
     }
 
-    .back-button:hover {
-      box-shadow: 0 0 16px rgba(255,215,0,0.6);
-      transform: scale(1.05);
+    @media (max-width: 768px) {
+      .container {
+        margin: 1rem;
+        padding: 1rem;
+      }
+
+      h1 {
+        font-size: 1.4rem;
+      }
+
+      .btn {
+        width: 100%;
+        max-width: 90%;
+        font-size: 0.95rem;
+      }
     }
   </style>
 </head>
 <body>
-
   <!-- 🔰 Header -->
   <header>
     <div>EternalSMP</div>
@@ -91,19 +147,18 @@
 
   <!-- 📜 Preview Container -->
   <div class="container fade-in-up">
-    <h1 style="color: gold;">📜 Preview Karakter</h1>
-
-    <button class="back-button" onclick="window.location.href='eternalsmp-oc-form.html'">🔙 Kembali ke Formulir</button>
+    <h1>📜 Preview Karakter OC</h1>
 
     <pre id="previewArea">Memuat preview karakter...</pre>
+
+    <div class="button-group">
+      <button class="btn" onclick="window.location.href='eternalsmp-oc-form.html'">🔙 Kembali ke Formulir</button>
+      <button class="btn" onclick="submitToDiscord()">📨 Kirim Pendaftaran</button>
+    </div>
   </div>
 
-  <!-- 🖼️ Banner / Gambar Penutup -->
-  <div class="container fade-in-up" style="text-align: center; padding-top: 0;">
-    <img src="https://github.com/marcellnw/eternalsmpoc/blob/main/20250625_141013.png?raw=true"
-         alt="EternalSMP Banner"
-         style="max-width: 90%; border-radius: 12px; box-shadow: 0 0 24px rgba(255,215,0,0.2); margin-top: 2rem;">
-  </div>
+  <!-- 🖼️ Banner -->
+  <img class="banner" src="https://github.com/marcellnw/eternalsmpoc/blob/main/20250625_141013.png?raw=true" alt="Banner EternalSMP">
 
   <!-- 📥 Footer -->
   <footer>
@@ -111,7 +166,7 @@
     Cerita & Dunia oleh komunitas EternalSMP.
   </footer>
 
-  <!-- 📜 Script Ambil Preview -->
+  <!-- 📜 Script Preview -->
   <script>
     const data = JSON.parse(localStorage.getItem("ocPreviewData") || "{}");
     const label = {
@@ -134,7 +189,12 @@
     }
 
     document.getElementById("previewArea").innerText = output || "Data tidak ditemukan.";
-  </script>
+
+    // Optional: Anda bisa memanggil function submitToDiscord dari file JS form utama jika disatukan
+    function submitToDiscord() {
+      alert("📨 Fungsi submit ke Discord perlu ditambahkan atau dihubungkan dari script utama.");
+    }
+</script>
 
 </body>
 </html>
