--- a/eternalsmp-oc-form.html
+++ b/eternalsmp-oc-form.html
@@ -152,7 +152,7 @@
     <pre id="previewArea">Memuat preview karakter...</pre>
 
     <div class="button-group">
-      <button class="btn" onclick="window.location.href='eternalsmp-oc-form.html'">🔙 Kembali ke Formulir</button>
+      <button class="btn" onclick="window.location.href='page2.html'">🔙 Kembali ke Formulir</button>
       <button class="btn" onclick="submitToDiscord()">📨 Kirim Pendaftaran</button>
     </div>
   </div>
